styles.scss
body {
    margin: 0;
    padding: 0;
    overflow: hidden;
    width: 100vw;
    height: 100vh;

    header {
        position: relative;
        overflow: hidden;
        padding: 0;
        margin: 0;
        width: 100vw;
        height: 100vh;
        background-color: black;

        video {
            position: absolute;
            top: 50%;
            left: 50%;
            width: auto;
            height: auto;
            min-width: 100%;
            min-height: 100%;
            overflow: hidden;
            transform: translate(-50%, -50%);
        }
    }

    nav {
        overflow: hidden;
        height: 100vh;
        width: 100vw;
        position: absolute;
        top: 0;
        left: 0;

        .flex-container {
            display: flex;
            flex-direction: row;
            height: 100vh;
            width: 100vw;
            overflow: hidden;

            div.name-container{
                overflow: hidden;
                position: absolute;
                top: 0;
                left: 0;
                // border: 2px solid red;
                width: 550px;
                height: 550px;

        
                .name {
                    font-family: 'Arial Black', Gadget, sans-serif;
                    color: white;
                    font-size: 8rem;
                    margin: 0;
                    position: absolute;
                    top: 30vh;
                    overflow: hidden;
                }
        
                #one {
                    top: 50px;
                    left: 50px;
                }
                
                #two {
                    top: 150px;
                    left: 50px;
                }
                
                #three {
                    top: 250px;
                    left: 50px;
                    color: red;
                }
            }

            .flex-right, .flex-left {
                flex: 1;
                border: 1px solid white;
                /* transform: translate(0, 50vh); */
                background-color: red;
                opacity: .60;
                padding: 0;
            }

            .flex-left {
                transform: translate(0, 100vh);
                transition: all 0.5s ease-out;
            }

            .flex-right {
                transform: translate(0, -100vh);
                transition: all 0.5s ease-out;

                .menu {
                    list-style-type: none;
                    text-align: center;
                    margin-top: 40vh;

                    @for $x from 1 to 3 {
                        li:nth-child(#{$x}){
                            transition-delay: 0.2s * $x;
                        }
                    }

                    li {
                        margin-bottom: .5rem;
                        padding: 0;
                        transform: translate(50vw);
                        transition: all 0.5s ease-out;

                        a {
                            text-decoration: none;
                            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
                            font-size: 3rem;
                            color: grey;

                            &.current {
                                color: white;
                            }

                        }

                    }
                }
            }
        }
    }

    .button {
        position: absolute;
        right: 25px;
        top: 25px;
        width: 30px;
        transform: rotate(180deg);
        transition: all 0.5s ease-out;

        .line { 
            padding: 2px;
            background-color: white;
            width: 100%;
            margin-bottom: 6px;
            box-sizing: border-box;
        }

        #line1 {
            transform: translate(0, 0) rotate(0);
            transition: all 0.5s ease-out;
        }
        
        #line2 {
            opacity: 100;
            transition: all 0.5s ease-out;
        }
        
        #line3 {
            transform: translate(0, 0) rotate(0);
            transition: all 0.5s ease-out;
        }

    }


}

// toggle styles
div.flex-left.toggleOn {
    transform: translate(0, 0) !important;
}

div.flex-right.toggleOn {
    transform: translate(0, 0) !important;
}

#line1.toggleOn {
    transform: translate(0, 10px) rotate(0.13turn) !important;
    
}

#line2.toggleOn {
    opacity: 0 !important;
}

#line3.toggleOn {
    transform: translate(0, -10px) rotate(-0.13turn) !important;
}

.button.toggleOn {
    transform: rotate(0);
}

div.flex-right.toggleOn li {
    transform: translate(0) !important;
}

// work.html

.work {
    overflow: scroll !important;
}

#hello {
    z-index: 2;
    height: 100%;
    width: 100vw;
}


// media querries

@media (max-width: 550px) {
    div.flex-container {
        flex-direction: column !important;

        .menu {
            margin-top: 10vh !important;
        }

    }
    div.flex-left {
        transform: translate(-100vh, 0) !important;
    }
    div.flex-left.toggleOn{
        transform: translate(0, 0) !important;
    }

    div.flex-right {
        transform: translate(100vh, 0) !important;
    }

    div.name-container {
        width: 95vw !important;
    }
    div.name-container .name {
        font-size: 5rem !important;
    }
}

@media (max-width: 400px) {
    div.name-container .name{
        font-size: 3rem !important;

        #one {
            top: 50px;
            left: 50px;
        }
        
        #two {
            top: 150px;
            left: 50px;
        }
        
        #three {
            top: 250px;
            left: 50px;
            color: red;
        }
    }
}

